--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "start": "node server.js",
     "seed": "node seed.js",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "express-validator": "^7.0.1",
     "jest": "^29.5.0",
     "path": "^0.12.7",
     "sequelize": "^6.21.4",
     "sqlite3": "^5.0.11",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
